duplicated paragraph removed

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -76,7 +76,7 @@ The concept of shared stocks was developed following the ratification of the UN 
 
 Most fisheries management is poorly adapted to address species’ shifting distributions because of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal variation in their distribution (e.g., migration, reproductive cycle), misalignment between fisheries resources' allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon species (*Oncorhynchus sp.*), jointly managed by Canada and the U.S., were heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Continuing climate change is expected to exacerbate such patterns [@Pinsky:2018cb; @Sumaila:2011bq]. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
-Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (see Methods and Supplemental Materials). We then estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. \@ref(fig:toeFigure1N)) and the intensity of this shift (i.e., time of emergence and stock share ratio; see Methods and Supplemental Materials). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
+Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). We then estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. \@ref(fig:toeFigure1N)) and the intensity of this shift (i.e., time of emergence and stock share ratio; Methods). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
 ```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone (EEZ) to another. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring EEZ sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarity."}
 
@@ -89,13 +89,11 @@ grid.raster(img)
 
 <!-- # Methods -->
 
-<!-- We estimate the year in which 663 transboundary species (i.e., 9,132 stocks) previously identified by Palacios-Abrantes *et al.* (2020) [@PalaciosAbrantes:2020tv] would undergo changes in their shared distribution beyond historical variation and the intensity of said changes (see the Supplementary Materials). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas). We defined the boundaries of the world’s EEZs using the Sea Around Us (http://www.seaaroundus.org/) spatial division, noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories (see the Supplementary Materials - *Databases and species selection*). -->
+We coupled a mechanistic population dynamic model (i.e., the DBEM) with an Earth System Model (i.e., the Geophysical Fluid Dynamics Laboratory Earth system model, GFDL) to project the future global distribution of transboundary stocks under climate change (see the Supplementary Materials). In brief, the DBEM algorithm uses historical species distribution and catch, eco-physiology, habitat suitability and spatial population dynamics to project abundance and potential fisheries catches in a $0.5^o$ x $0.5^o$ grid-cell of the world [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd]. The DBEM was driven with ten different simulations of the GFDL ESM2M (i.e., a ten-ensemble member simulation) each of them representing a unique atmosphere and ocean state at the start of the simulation [@Dunne:2012bo; @Dunne:2013db; @Frolicher:2020cc]. The simulations were run under historical forcing until 2005, afterwards and until 2100, simulations followed a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5) [@Riahi:2011dk].
 
-<!-- We coupled a mechanistic population dynamic model (i.e., the DBEM) with an Earth System Model (i.e., the Geophysical Fluid Dynamics Laboratory Earth system model, GFDL) to project the future global distribution of transboundary stocks under climate change (see the Supplementary Materials). In brief, the DBEM algorithm uses historical species distribution and catch, eco-physiology, habitat suitability and spatial population dynamics to project abundance and potential fisheries catches in a $0.5^o$ x $0.5^o$ grid-cell of the world [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd]. The DBEM was driven with ten different simulations of the GFDL ESM2M (i.e., a ten-ensemble member simulation) each of them representing a unique atmosphere and ocean state at the start of the simulation [@Dunne:2012bo; @Dunne:2013db; @Frolicher:2020cc]. The simulations were run under historical forcing until 2005, afterwards and until 2100, simulations followed a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5) [@Riahi:2011dk]. -->
+We then developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1)A). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(eq:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged).
 
-<!-- We then developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1)A). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(eq:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). -->
-
-<!-- Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (See Supplemental Material - *Quantifying the intensity of transboundary stocks’ range shift*). A threat point is defined as the minimum payoff a player would be willing to receive to cooperate in a game-theoretic model. Here, we define the minimum payoff as two standard deviations from the historical catch proportion (average of 1951 to 2005) that each EEZ had for each stock. This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Finally, we computed changes in catch proportion that were below the threat point of neighboring EEZs sharing a stock for two time periods relative to the historical proportion: 2030 (2021 and 2040) matching the UN 2030 Agenda and a mid-century timeline (2040 to 2050). -->
+Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (See Supplemental Material - *Quantifying the intensity of transboundary stocks’ range shift*). A threat point is defined as the minimum payoff a player would be willing to receive to cooperate in a game-theoretic model. Here, we define the minimum payoff as two standard deviations from the historical catch proportion (average of 1951 to 2005) that each EEZ had for each stock. This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Finally, we computed changes in catch proportion that were below the threat point of neighboring EEZs sharing a stock for two time periods relative to the historical proportion: 2030 (2021 and 2040) matching the UN 2030 Agenda and a mid-century timeline (2040 to 2050).
 
 # Results
 
@@ -160,7 +158,7 @@ grid.raster(img)
 
 Our findings highlighting early shifts in the shared distribution of transboundary stocks concur with previous studies that have detected changes in marine catch composition and attributed these to climate change [e.g., @Cheung:2013gk; @Frainer:2017ji; @Last:2011fd]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US), in response to climatic, and associated oceanographic and ecological changes [@Zeidberg:2007gs]. A new fishery targeting Humboldt squid quickly developed on the heels of the species’ range expansion [@Pinsky:2014by]. In the northeast Atlantic, fisheries on Atlantic mackerel (*Scomber scombrus*) are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel due to environmental variation into Icelandic waters in 2007 resulted in Iceland capturing 6% of the fishery’s total allowable catch and a further 18% in 2008, without consultation with NEAFC, threatening the sustainability of the stock [@Spijkers:2017ij]. These changes resulted in disputes between Iceland and the Faroe Islands, as well as among NEAFC member states [@Spijkers:2017ij]. Other documented cases of early range expansions across international jurisdictions have also been documented for multiple stocks along the European Union regulatory areas [@Baudron:2020dj], the Benguela Current [@Potts:2014bq; @Yemane:2014jg], and the southwest South Atlantic Ocean [@Franco:2020bk]. Despite these documented cases, broadly speaking, there is a lack of information and data regarding which and how many transboundary stocks are shifting, where they are shifting to and whether they are jointly managed. This is particularly important for international fisheries management as modeling exercises project that climate change will continue to change the distribution of transboundary stocks to the point that some tropical EEZs will lose them completely [@Oremus:2020id] while other EEZs, mainly in higher latitudes, will stand to win new stocks [@Pinsky:2018cb].
 
-###mClimate risk hotspots for transboundary fisheries management
+### Climate risk hotspots for transboundary fisheries management
 
 Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figs. \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Regions such as the Caribbean are characterized by high levels of warming relative to historical natural variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively low area EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei]. Thus, coordinating the management of shifting transboundary stocks for countries in these regions will be particularly challenging. 
 
